--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <body>
         <h1>Hi there class</h1>
         <a href="https://www.bmcc.cuny.edu/j2ee/">Link to BMCC</a>
+        <p>added this while in GitHub.</p>
         <a href="page-2.html"> link to Page 2</a>
     </body>
 
